--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
-    "ejs": "^2.4.1",
-    "express": "^4.13.4",
-    "mocha": "^2.4.5",
-    "mongodb": "^2.1.16",
-    "morgan": "^1.7.0",
-    "object-assign":"4.1.0"
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "mocha": "^2.5.3",
+    "mongodb": "^2.2.36",
+    "morgan": "^1.9.0",
+    "object-assign": "^4.1.0"
   },
   "engine": {
     "node": "*",
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js"
+    "test": "mocha --timeout 5000 tests/*_test.js"
   },
   "repository": {
     "type": "git",
