--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.3",
     "mocha": "^2.5.3",
     "mongodb": "^2.2.36",
+    "mongoose": "^5.2.5",
     "morgan": "^1.9.0",
     "object-assign": "^4.1.0"
   },
